choreonoid_add_simple_controller(MobileRobotController MobileRobotController.cpp)
target_link_libraries(MobileRobotController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(MobileRobotCameraController MobileRobotCameraController.cpp)
target_link_libraries(MobileRobotCameraController ${roscpp_LIBRARIES})
