choreonoid_add_simple_controller(MobileRobotController MobileRobotController.cpp)

choreonoid_add_simple_controller(MobileRobotTwistController MobileRobotTwistController.cpp)
target_link_libraries(MobileRobotTwistController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(MobileRobotCameraController MobileRobotCameraController.cpp)
target_link_libraries(MobileRobotCameraController ${roscpp_LIBRARIES})
