choreonoid_add_simple_controller(MobileRobotDriveTester MobileRobotDriveTester.cpp)

choreonoid_add_simple_controller(MobileRobotDriveController MobileRobotDriveController.cpp)
target_link_libraries(MobileRobotDriveController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(MobileRobotPanTiltController MobileRobotPanTiltController.cpp)
target_link_libraries(MobileRobotPanTiltController ${roscpp_LIBRARIES})
